--- a/DataMigration/appsettings.json
+++ b/DataMigration/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=LAPTOP-2M11U0BL\\SQLEXPRESS;Database=gi-carbon-test;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;",
-    "PgSql": "Host=172.20.3.75;Port=5029;Username=fk-test1;Password=fktest@2024;Database=fk-test;"
+    "SqlServer": "connectionstring",
+    "PgSql": "Connectionstring"
   }
 }
